// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders margin 1`] = `
.c0 {
  margin: 4px;
}

<div
  className="c0"
/>
`;

exports[`Box renders margin 2`] = `
.c0 {
  margin: 0;
}

@media screen and (min-width:544px) {
  .c0 {
    margin: 4px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin: 8px;
  }
}

@media screen and (min-width:1012px) {
  .c0 {
    margin: 16px;
  }
}

<div
  className="c0"
/>
`;

exports[`Box renders margin 3`] = `
.c0 {
  margin: 4px;
}

@media screen and (min-width:544px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1012px) {

}

@media screen and (min-width:544px) {
  .c0 {
    margin: 4px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin: 4px;
  }
}

@media screen and (min-width:1012px) {
  .c0 {
    margin: 16px;
  }
}

<div
  className="c0"
/>
`;

exports[`Box renders padding 1`] = `
.c0 {
  padding: 4px;
}

<div
  className="c0"
/>
`;

exports[`Box renders padding 2`] = `
.c0 {
  padding: 0;
}

@media screen and (min-width:544px) {
  .c0 {
    padding: 4px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding: 8px;
  }
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 16px;
  }
}

<div
  className="c0"
/>
`;

exports[`Box renders padding 3`] = `
.c0 {
  padding: 4px;
}

@media screen and (min-width:544px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1012px) {

}

@media screen and (min-width:544px) {
  .c0 {
    padding: 4px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding: 4px;
  }
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 16px;
  }
}

<div
  className="c0"
/>
`;

exports[`Box respects display 1`] = `
.c0 {
  display: inline;
}

<div
  className="c0"
  display="inline"
/>
`;

exports[`Box respects display 2`] = `
.c0 {
  display: inline-block;
}

<div
  className="c0"
  display="inline-block"
/>
`;

exports[`Box respects display 3`] = `
.c0 {
  display: none;
}

<div
  className="c0"
  display="none"
/>
`;

exports[`Box respects display 4`] = `
.c0 {
  display: none;
}

@media screen and (min-width:544px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    display: block;
  }
}

<div
  className="c0"
  display={
    [
      "none",
      "none",
      "block",
    ]
  }
/>
`;
